@@ -1,17 +1,14 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
   - "3.4"
   - "3.5"
-  # does not have headers provided, please ask https://launchpad.net/~pypy/+archive/ppa
-  # maintainers to fix their pypy-dev package.
   - "pypy"
-  - "nightly"
+
 # command to install dependencies
 install:
+  - python -m pip install -U pip
+  - python -m pip install -U setuptools
   - pip install .
 
 # command to run tests
