@@ -39,7 +39,7 @@ setup(
 #     },
 #
 #     install_requires=['autobahn'],
-#     setup_requires=['pbr>=1.9','setuptools>=17.1''pytest-runner'],
+#     setup_requires=['pbr>=1.9','setuptools>=17.1','pytest-runner'],
 #     tests_require=['pytest'],
 #     pbr=True,
 #     classifiers=[
